--- a/App/App.csproj
+++ b/App/App.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
     <Folder Include="wwwroot\PDF\" />
   </ItemGroup>
 
