--- a/App/App.csproj
+++ b/App/App.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.102.0" />
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="IronOcr" Version="2023.7.28" />
     <PackageReference Include="itext7" Version="8.0.0" />
